# scan-to-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
src/scan_to_pdf/: __init__.py  main.py
tests/: test_main.py
